# hera_description

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  package.xml
config/rviz/: model.rviz  visualize_model.rviz
config/yaml/: hera_control.yaml
launch/: description_rviz.launch  load_description.launch  upload_description.launch  visualize_model.launch
meshes/: kinect_one.stl  torso_sensor_plat.stl
meshes/base/: head.stl  torso.stl  torso_triangle.stl
meshes/camera_meshes/: Camera.stl  Inferior.stl  Intermediario.stl
meshes/manipulator/: backrest.STL  hera_link.STL
meshes/sensors/: hokuyo_utm.stl  zed2.stl
robots/: hera_1.urdf.xacro  hera_2.urdf.xacro  hera_4.urdf.xacro  hera_full.urdf.xacro
urdf/: commons.urdf.xacro  robot.xacro.xml
urdf/actuators/: base.urdf.xacro  head.urdf.xacro  torso.urdf.xacro
urdf/base/: base.xacro.xml  head.xacro.xml  torso.xacro.xml
urdf/gazebo/: asus_xtion.xacro.xml  base.xacro.xml  colors.xacro.xml  control.xacro.xml  hokuyo_urg.xacro.xml  hokuyo_utm.xacro.xml  imu.xacro.xml  manipulator.xacro.xml
urdf/manipulator/: manipulator.xacro.xml  manipulator_utils.xacro.xml
urdf/sensors/: asus_xtion.urdf.xacro  asus_xtion.xacro.xml  hokuyo_urg.urdf.xacro  hokuyo_urg.xacro.xml  hokuyo_utm.urdf.xacro  hokuyo_utm.xacro.xml  kinect_one.urdf.xacro  realsense_d435.urdf.xacro  zed.urdf.xacro
urdf/simulation/: asus_xtion.gazebo.xacro  colors.gazebo.xacro  hokuyo_utm.gazebo.xacro  kinect_one.gazebo.xacro  manipulator.gazebo.xacro  zed2.gazebo.xacro
urdf/utils/: utils.xacro.xml
(+3 files in other folders)
